--- a/src/components/FoodItem.module.css
+++ b/src/components/FoodItem.module.css
@@ -1,3 +1,25 @@
 .item {
-    
+    display: flex;
+    background-color: white;
+    /* width: 400px; */
+    width: max-content;
+    box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.5);
+    padding: 16px;
+    font-size: 48px;
+
+    line-height: 56px;
+}
+
+.image {
+    width: 160px;
+    height: 160px;
+}
+
+.buttons {
+    text-align: right;
+    height: 48px;
+}
+
+.content {
+    width: 100%;
 }
