--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,12 +1,12 @@
 .modal {
     position: fixed;
-    top: 10vh;
+    top: 15vh;
     /* Homeworke: FIX PLEASE */
-    width: 100%;
-    margin-left: 40px;
-    margin-right: 40px;
+    width: 782px;
+    /* margin-left: 40px;
+    margin-right: 40px; */
     /* align-content: center; */
 
-    padding: 40px;
-    background-color: white;
+    /* padding: 40px; */
+    background-color: rgb(126, 29, 126);
 }
