--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,3 +2,12 @@
   display: flex;
   flex-direction: row;
 }
+
+.addNew {
+  position:sticky;
+  left: 110vh;
+  bottom: 92vh;
+  color: rgb(10, 115, 172);
+  font-size: 3em;
+  
+}
