--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  max-width: 782px;
   margin: 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
