--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,10 +13,11 @@
   display: flex;
   justify-content: center;
   font-size: 32px;
-  font-weight:bold;
+  font-weight: bold;
   color: rgb(232, 242, 49);
   box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.5);
-  text-shadow: 1px 1px 2px rgb(211, 186, 86), 0 0 1em rgb(157, 255, 0), 0 0 0.2em rgba(251, 255, 0, 0.837);
+  text-shadow: 1px 1px 2px rgb(211, 186, 86), 0 0 1em rgb(157, 255, 0),
+    0 0 0.2em rgba(251, 255, 0, 0.837);
 }
 
 .Appmain {
@@ -24,25 +25,31 @@
   flex-grow: 1;
 }
 
-
 .content {
   display: flex;
   flex-direction: row;
- 
+}
+
+.sorting {
+  margin-bottom: 5px;
+  width: 140px;
+}
+
+.sortags {
+  display: flex;
+  flex-direction: column;
+  margin-top: 5px;
 }
 
 .addNew {
-  position:sticky;
+  position: sticky;
   /* top: 20px; */
   left: 100%;
   bottom: 90vh;
   color: #10646a;
- 
+
   font-size: 3em;
-  
+
   border-radius: 25px;
   border: 0px;
-  
-  
-  
 }
