--- a/src/components/FoodItem.module.css
+++ b/src/components/FoodItem.module.css
@@ -24,7 +24,6 @@
   justify-content: right;
   position: relative;
   top: 0px;
-
 }
 .icons {
   font-size: 20px;
@@ -60,4 +59,21 @@
   font-size: large;
   margin-left: 10px;
   margin-top: 10px;
+}
+
+.date {
+  display: flex;
+  flex-direction: row;
+  font-size: 16px;
+  color: gray;
+  margin: 10px;
+  height: 20px;
+  position: relative;
+  top: 40px;
+}
+
+.tagsDate {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
