--- a/src/App.module.css
+++ b/src/App.module.css
@@ -29,14 +29,12 @@ input {
   height: 25px;
 }
 .button {
+  color: greenyellow;
+  position: fixed;
+  bottom: 30px;
+  right: 25vw;
   display: inline-block;
   border-radius: 3px;
   text-align: center;
-  height: 25px;
-  color: white;
-  background-color: rgb(54, 47, 47);
-}
-.button:hover{
-  height: 30px;
-  background-color: rgb(122, 11, 11);
+
 }
