--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,8 +1,19 @@
+.modalWrapper {
+    display: flex;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(59, 59, 59, 0.664);
+}
+
 .modal {
     position: fixed;
     top: 15vh;
     /* Homeworke: FIX PLEASE */
-    width: 782px;
+    width: 740px;
     /* margin-left: 40px;
     margin-right: 40px; */
     /* align-content: center; */
