--- a/src/components/TagSearch.module.css
+++ b/src/components/TagSearch.module.css
@@ -25,11 +25,13 @@
 .tagInput {
   /* position: sticky; */
   min-width: 200px;
-  width: 778px;
+  width: 100%;
   min-height: 50px;
   /* font-size: 40px; */
   border: 0px;
+  outline: 0px;
   background-color: rgb(242, 242, 241);
   font-size: 20px;
+  padding: 0px;
   /* border-radius: 25px; */
 }
