--- a/src/components/FoodItem.module.css
+++ b/src/components/FoodItem.module.css
@@ -37,33 +37,33 @@
 }
 
 .content {
-  width: 100%;
+  box-sizing: border-box;
 }
 
-.tags {
-  display: flex;
-  flex-direction: row;
-  font-size: 16px;
-  color: gray;
-  margin: 10px;
-  height: 20px;
-  position: relative;
-  top: 40px;
-}
+
 .tag {
   margin-left: 5px;
-  height: 20px;
+  
 }
 .name {
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
   margin-left: 10px;
-  margin-top: 10px;
+  
 }
+.tags {
+  display: flex;
 
+  font-size: 16px;
+  color: gray;
+  margin: 10px;
+
+  width: 240px;
+  position: relative;
+  top: 40px;
+}
 .date {
   display: flex;
-  flex-direction: row;
   font-size: 16px;
   color: gray;
   margin: 10px;
@@ -72,8 +72,11 @@
   top: 40px;
 }
 
-.tagsDate {
+.tagsDate {box-sizing: border-box;
   display: flex;
   flex-direction: row;
+  justify-content: left;
+  flex-flow:row wrap;
+  height: 50px;
   justify-content: space-between;
 }
