--- a/src/components/FoodForm.module.css
+++ b/src/components/FoodForm.module.css
@@ -3,10 +3,10 @@
 .image {
   width: 400px;
   height: 400px;
-  margin-left: 50px;
 }
 .header {
   background-color: white;
+  border-radius: 8px 8px 0px 0px;
 }
 
 .projectname {
@@ -31,7 +31,7 @@
   flex-direction: row;
   background-color: white;
   padding: 16px;
-  border-radius: 4px;
+  border-radius: 0px 0px 8px 8px;
 }
 
 .image {
@@ -40,18 +40,19 @@
 }
 
 .foodName {
-  width: 300px;
+  width: 100%;
   border: 1px grey dotted;
+  margin: 0 10px 4px 10px;
   border-radius: 10px;
   height: 30px;
 }
 
 .imgLink {
-  width: 100px;
+  width: 100%;
   border: 1px grey dotted;
+  margin: 0 10px 4px 10px;
   border-radius: 10px;
-  margin: 0 10px 0 10px;
-  height: 22px;
+  height: 30px;
 }
 
 .saveButton,
