--- a/src/App.module.css
+++ b/src/App.module.css
@@ -53,3 +53,11 @@
   border-radius: 25px;
   border: 0px;
 }
+
+.icon {
+  margin-top: 8px;
+  margin-right: 8px;
+  filter: drop-shadow(1px 1px 2px rgb(211, 186, 86))
+    drop-shadow(0 0 1em rgb(157, 255, 0))
+    drop-shadow(0 0 0.2em rgba(251, 255, 0, 0.837));
+}
