--- a/src/components/FoodItem.module.css
+++ b/src/components/FoodItem.module.css
@@ -7,8 +7,6 @@
   box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.5);
   padding: 16px;
   font-size: 48px;
-
-  line-height: 56px;
 }
 
 .image {
@@ -40,16 +38,13 @@
   box-sizing: border-box;
 }
 
-
 .tag {
   margin-left: 5px;
-  
 }
 .name {
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
   margin-left: 10px;
-  
 }
 .tags {
   display: flex;
@@ -72,11 +67,12 @@
   top: 40px;
 }
 
-.tagsDate {box-sizing: border-box;
+.tagsDate {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   justify-content: left;
-  flex-flow:row wrap;
+  flex-flow: row wrap;
   height: 50px;
   justify-content: space-between;
 }
