--- a/src/components/FoodItem.module.css
+++ b/src/components/FoodItem.module.css
@@ -41,38 +41,46 @@
 .tag {
   margin-left: 5px;
 }
+
+.nametagsbox{display: flex;
+  flex-direction: column;}
 .name {
+  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   font-size: large;
-  margin-left: 10px;
+  padding-left: 10px;
+  width: 240px;
 }
+
+
 .tags {
   display: flex;
-
+  /* align-self: flex-start; */
+  width: 270px;
   font-size: 16px;
   color: gray;
-  margin: 10px;
-
-  width: 240px;
-  position: relative;
-  top: 40px;
+ padding-left: 10px;
+  
+  
 }
+.datebox{  display: flex;
+  flex-direction: column;
+  justify-content:flex-end;
+}
+.dateheight{height: 90px;}
 .date {
-  display: flex;
+  
   font-size: 16px;
-  color: gray;
-  margin: 10px;
-  height: 20px;
-  position: relative;
-  top: 40px;
+  color: gray; 
 }
-
+.namebox{height: 150px;}
 .tagsDate {
-  box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  justify-content: left;
-  flex-flow: row wrap;
-  height: 50px;
-  justify-content: space-between;
+  box-sizing: border-box;
+  align-items: flex-end;
+  width: 400px;
+  height: 135px;
+  
+
 }
