--- a/src/components/TagSearch.module.css
+++ b/src/components/TagSearch.module.css
@@ -23,7 +23,7 @@
 }
 
 .tagInput {
-  margin: 10px 0px;
+  margin: 6px 10px 10px 10px;
   width: 100%;
   /* width: 300px; */
   border: 1px grey dotted;
