--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,9 +15,10 @@
   font-size: 32px;
   font-weight: bold;
   color: rgb(232, 242, 49);
-  box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.5);
-  text-shadow: 1px 1px 2px rgb(211, 186, 86), 0 0 1em rgb(157, 255, 0),
-    0 0 0.2em rgba(251, 255, 0, 0.837);
+  box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 1px 8px rgb(211, 186, 86),
+    0px 0px 16px rgb(157, 255, 0),
+    0px 0px 4px rgba(251, 255, 0, 0.837);
 }
 
 .Appmain {
@@ -58,6 +59,6 @@
   margin-top: 8px;
   margin-right: 8px;
   filter: drop-shadow(1px 1px 2px rgb(211, 186, 86))
-    drop-shadow(0 0 1em rgb(157, 255, 0))
-    drop-shadow(0 0 0.2em rgba(251, 255, 0, 0.837));
+    drop-shadow(0px 0px 4px rgb(157, 255, 0))
+    drop-shadow(0px 0px 1px rgba(251, 255, 0, 0.837));
 }
