--- a/src/components/FoodItem.module.css
+++ b/src/components/FoodItem.module.css
@@ -4,8 +4,9 @@
   width: 600px;
   /* width: max-content; */
   min-width: 100px;
-  box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.5);
   padding: 16px;
+  margin-bottom: 8px;
   font-size: 48px;
 }
 
