--- a/src/components/FoodItem.module.css
+++ b/src/components/FoodItem.module.css
@@ -6,7 +6,6 @@
   min-width: 100px;
   box-shadow: 2px 2px 3px 2px rgba(0, 0, 0, 0.5);
   padding: 16px;
-  margin-bottom: 8px;
   font-size: 48px;
 }
 
@@ -43,10 +42,12 @@
   margin-left: 5px;
 }
 
-.nametagsbox{display: flex;
+.nametagsbox {
+  display: flex;
   flex-direction: column;
-  justify-content:space-between;
-  height: 160px;}
+  justify-content: space-between;
+  height: 160px;
+}
 .name {
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
@@ -55,26 +56,23 @@
   width: 240px;
 }
 
-
 .tags {
   display: flex;
   /* align-self: flex-start; */
   width: 270px;
   font-size: 16px;
   color: gray;
- padding-left: 10px;
-  
-  
+  padding-left: 10px;
 }
-.datebox{  display: flex;
+.datebox {
+  display: flex;
   flex-direction: column;
-  justify-content:flex-end;
+  justify-content: flex-end;
 }
 
 .date {
-  
   font-size: 16px;
-  color: gray; 
+  color: gray;
 }
 
 .tagsDate {
