--- a/src/App.module.css
+++ b/src/App.module.css
@@ -66,3 +66,8 @@
     drop-shadow(0px 0px 4px rgb(157, 255, 0))
     drop-shadow(0px 0px 1px rgba(251, 255, 0, 0.837));
 }
+
+.temp{font-size: small;}
+img{width: 30px;}
+
+.tempbutton{width:50px;height: 50px;}
